--- a/webservices/.htaccess
+++ b/webservices/.htaccess
@@ -1,8 +1,8 @@
 # Send request via index.php
-php_flag display_startup_errors on
-php_flag display_errors on
-php_flag html_errors on
-php_flag  log_errors on
+php_flag display_startup_errors off
+php_flag display_errors off
+php_flag html_errors off
+php_flag  log_errors off
 php_value error_log  /home/path/public_html/domain/PHP_errors.log
 
 Options +FollowSymlinks
@@ -12,5 +12,7 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([A-Za-z0-9]+)$  index.php?page=$1&action=$2 [NC,L]
+
+
+RewriteRule ^(.*)$ index.php?param=$1 [QSA]
 
